mule-user-guide/v/3.2/exception-strategy-configuration-reference.adoc
= Exception Strategy Configuration Reference

This page provides details on the elements you configure for exception strategies. This information is pulled directly from `mule.xsd` and is cached. If the information appears to be out of date, refresh the page. For more information on exception strategies, see link:https://docs.mulesoft.com/mule-user-guide/v/3.2/error-handling[Error Handling].

== Default exception strategy

Provides default exception handling.

=== Attributes of <default-exception-strategy...>

[%header,cols="20,10,10,10,50"]
|===
|Name |Type |Required |Default |Description
|enableNotifications |boolean |no |  |Determines whether ExceptionNotifications will be fired from this strategy when an exception occurs. Default is true.
|stopMessageProcessing |boolean |no |false |Stop the flow/service when an exception occurs. You will need to restart the flow/service manually after this (e.g, using JMX).
|===

=== Child Elements of <default-exception-strategy...>

[%header,cols="10,10,80"]
|===
|Name |Cardinality |Description
|commit-transaction |0..1 |These exceptions will be considered "delivered" after handling by the exception strategy. Any exception not accepted by this filter will be redelivered/rolled back. You can set a comma-separated list of wildcard patterns that will be matched against the fully qualified class name of the current exception.
|rollback-transaction |0..1 |These exceptions will be redelivered/rolled back after handling by the exception strategy. You can set a comma-separated list of wildcard patterns that will be matched against the fully qualified class name of the current exception.
|abstract-message-processor |0..1 |A message processor A placeholder for message processor elements.
|abstract-outbound-endpoint |0..1 |An outbound endpoint A placeholder for outbound endpoint elements. Outbound endpoints dispatch messages to the underlying transport.
|===

== Custom exception strategy

A user-defined exception strategy.

=== Attributes of <custom-exception-strategy...>

[%header,cols="20,10,10,10,50"]
|===
|Name |Type |Required |Default |Description
|enableNotifications |boolean |no |  |Determines whether ExceptionNotifications will be fired from this strategy when an exception occurs. Default is true.
|class |class name |yes |  |A class that implements the ExceptionListener interface. In addition, if an 'outbound-endpoint' element is specified, it is set as an "endpoint" bean property.
|===

=== Child Elements of <custom-exception-strategy...>

[%header,cols="10,10,80"]
|===
|Name |Cardinality |Description
|commit-transaction |0..1 |These exceptions will be considered "delivered" after handling by the exception strategy. Any exception not accepted by this filter will be redelivered/rolled back. You can set a comma-separated list of wildcard patterns that will be matched against the fully qualified class name of the current exception.
|rollback-transaction |0..1 |These exceptions will be redelivered/rolled back after handling by the exception strategy. You can set a comma-separated list of wildcard patterns that will be matched against the fully qualified class name of the current exception.
|abstract-message-processor |0..1 |A message processor A placeholder for message processor elements.
|abstract-outbound-endpoint |0..1 |An outbound endpoint A placeholder for outbound endpoint elements. Outbound endpoints dispatch messages to the underlying transport.
|spring:property |0..* |Spring-style property element for custom configuration.
|===
